# StreamLocal

./: .gitignore  README.md  SECURITY.md  creer_exe.bat  push_prod.bat  pyproject.toml
data/: source_portal.jsonc
docs/: scan-provider-implementation.md
src/autoflix_cli/: anilist.py  defaults.py  desktop.py  player_manager.py  proxy.py
src/autoflix_cli/app/: __init__.py  autostart.py  diagnostics.py  downloads.py  encoding.py  models.py  playback.py  providers.py  scans.py  server.py  store.py  subtitles.py  tracker_service.py
src/autoflix_cli/app/static/: app.js  index.html  styles.css
src/autoflix_cli/handlers/: goldenms.py
src/autoflix_cli/scraping/: goldenanime.py  goldenms.py  lelscans.py  manga.py  scan_manga.py  scan_manga_image_picker.py  subtitles.py
tests/: test_desktop_background.py  test_downloads_hls.py  test_downloads_v6.py  test_goldenanime_allanime.py  test_goldenms_no_subtitles.py  test_history_api.py  test_lelscans_provider.py  test_local_tracking.py  test_manga_api.py  test_manga_scraping.py  test_playback_passthrough.py  test_scan_api.py  test_scan_manga_provider.py  test_static_encoding.py  test_subtitle_proxy.py  test_videasy_hls_proxy.py
