[project]
name = "autoflix-cli"
version = "0.6.3"
description = "Watch movies, series, and anime in multiple languages (FR, EN, and more) directly from your terminal."
readme = "README.md"
requires-python = ">=3.9.2"
license = {text = "GPL-3.0"}
license-files = ["LICENSE"]
authors = [{name = "PaulExplorer"}]
keywords = ["autoflix", "anime", "movies", "series", "VF", "VOSTFR"]

# Dependencies
dependencies = [
    "beautifulsoup4>=4.14.3",
    "curl-cffi>=0.13.0",
    "flask>=3.1.2",
    "html5lib>=1.1",
    "jsbeautifier>=1.15.4",
    "readchar>=4.2.1",
    "rich>=14.2.0",
    "platformdirs>=4.0.0",
    "pycryptodome>=3.23.0",
    "m3u8>=6.0.0",
    "Pillow>=11.0.0",
    "pywebview>=5.4",
    "pystray>=0.19.5",
]

# Project URLs
[project.urls]
Homepage = "https://github.com/PaulExplorer/autoflix-cli"
Repository = "https://github.com/PaulExplorer/autoflix-cli.git"

[project.scripts]
autoflix = "autoflix_cli.main:main"
autoflix-desktop = "autoflix_cli.desktop:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
